# pinned-init

./: .clippy.toml  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  build.rs  flake.nix  sync-kernel.sh
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: check.yml  coverage.yml  nostd.yml  safety.yml  scheduled.yml  test.yml
doc/: crates.js  search-index.js  settings.html  source-files.js
doc/implementors/core/clone/: trait.Clone.js
doc/implementors/core/cmp/: trait.Eq.js  trait.PartialEq.js
doc/implementors/core/convert/: trait.From.js
doc/implementors/core/fmt/: trait.Debug.js
doc/implementors/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralEq.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js
doc/implementors/core/ops/deref/: trait.Deref.js  trait.DerefMut.js
doc/implementors/core/ops/drop/: trait.Drop.js
doc/implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
doc/implementors/pinned_init/transmute/: trait.TransmuteInto.js
doc/pinned_init/: all.html  attr.manual_init.html  attr.pinned_init.html  index.html  sidebar-items.js  trait.PinnedInit.html  trait.SafePinnedInit.html
doc/pinned_init/needs_init/: index.html  sidebar-items.js  struct.NeedsInit.html  struct.NeedsPinnedInit.html
doc/pinned_init/ptr/: index.html  sidebar-items.js  trait.OwnedUniquePtr.html
doc/pinned_init/static_uninit/: index.html  sidebar-items.js  struct.StaticUninit.html
doc/pinned_init/transmute/: index.html  sidebar-items.js  trait.TransmuteInto.html
doc/pinned_init_macro/: all.html  attr.manual_init.html  attr.pinned_init.html  index.html  sidebar-items.js
doc/src/pinned_init/: lib.rs.html  needs_init.rs.html  ptr.rs.html  static_uninit.rs.html
doc/src/pinned_init_macro/: lib.rs.html
examples/: big_struct_in_place.rs  doubly_linked_list.rs  error.rs  linked_list.rs  mutex.rs  mutex_attr.rs  mutex_dummy.rs  mutex_use.rs  pthread_mutex.rs  ptrbuf.rs  static_init.rs  unique.rs  with_zero.rs
internal/: Cargo.toml  build.rs
internal/src/: init.rs  lib.rs  pin_data.rs  pinned_drop.rs  syn_pin_data.rs  syn_pinned_drop.rs  syn_zeroable.rs  zeroable.rs
pinned-init-macro/: Cargo.toml
pinned-init-macro/src/: helpers.rs  init.rs  lib.rs  pin_data.rs  pin_project.rs  pinned_drop.rs  zeroable.rs
simple-safe-init-internal/: Cargo.toml
simple-safe-init-internal/src/: lib.rs
src/: __internal.rs  __private.rs  alloc.rs  example.rs  lib.md  lib.rs  macros.rs  needs_init.rs  pin_project.rs  ptr.rs  static_uninit.rs  tests.rs
tests/: alloc_fail.rs  compiletest.rs  const-generic-default.rs  many_generics.rs  ring_buf.rs  ui.rs  zeroing.rs
tests/ui/: colon_instead_of_arrow.rs  colon_instead_of_arrow.stderr  missing_field.rs  missing_field.stderr  missing_pin_data.rs  missing_pin_data.stderr  no_error_coercion.rs  no_error_coercion.stderr  no_pin_data_but_pinned_drop.rs  no_pin_data_but_pinned_drop.stderr  no_pin_on_phantompinned.rs  no_pin_on_phantompinned.stderr  pin_data_but_drop.rs  pin_data_but_drop.stderr  template.txt  try_access_guard.rs  try_access_guard.stderr  useless_pinned_drop.rs  useless_pinned_drop.stderr
tests/ui/compile-fail/init/: colon_instead_of_arrow.rs  colon_instead_of_arrow.stderr  field_value_wrong_type.rs  field_value_wrong_type.stderr  guard_access.rs  guard_access.stderr  invalid_init.rs  invalid_init.stderr  missing_comma.rs  missing_comma.stderr  missing_comma_with_zeroable.rs  missing_comma_with_zeroable.stderr  missing_error_type.rs  missing_error_type.stderr  missing_field.rs  missing_field.stderr  missing_pin_data.rs  missing_pin_data.stderr  no_error_coercion.rs  no_error_coercion.stderr  unexpected_question.rs  unexpected_question.stderr  wrong_generics.rs  wrong_generics.stderr  wrong_generics2.rs  wrong_generics2.stderr
tests/ui/compile-fail/pin_data/: missing_comma.rs  missing_comma.stderr  missing_pin.rs  missing_pin.stderr  no_pin_on_phantompinned.rs  no_pin_on_phantompinned.stderr  pin_data_but_drop.rs  pin_data_but_drop.stderr  twice.rs  twice.stderr  unexpected_args.rs  unexpected_args.stderr  unexpected_item.rs  unexpected_item.stderr
tests/ui/compile-fail/pinned_drop/: no_fn.rs  no_fn.stderr  no_pin_data_but_pinned_drop.rs  no_pin_data_but_pinned_drop.stderr  unexpected_additional_item.rs  unexpected_additional_item.stderr  unexpected_generics.rs  unexpected_generics.stderr  unexpected_item.rs  unexpected_item.stderr  unsafe.rs  unsafe.stderr  useless_pinned_drop.rs  useless_pinned_drop.stderr  wrong_receiver.rs  wrong_receiver.stderr
tests/ui/compile-fail/zeroable/: with_comma.rs  with_comma.stderr
tests/ui/expand/: many_generics.expanded.rs  many_generics.rs  pin-data.expanded.rs  pin-data.rs  pinned_drop.expanded.rs  pinned_drop.rs  simple-init.expanded.rs  simple-init.rs
