[package]
name = "pinned-init-macro"
version = "0.0.5"
edition = "2021"

authors = ["y86-dev"]
license = "MIT OR Apache-2.0"
description = "Proc macros for the pinned-init crate."

repository = "https://github.com/Rust-for-Linux/pinned-init"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
proc-macro2 = "1.0"

[build-dependencies]
rustc_version = "0.4"
