[package]
name = "pinned-init-macro"
version = "0.0.0"
edition = "2021"

authors = ["y86-dev"]
license = "MIT OR Apache-2.0"
description = "Proc macros for the pinned-init crate."

repository = "https://github.com/y86-dev/pinned-init"

[lib]
proc-macro = true

[dependencies]
syn = { version = "^1.0.0", features =  ["full"] }
proc-macro2 = "^1.0.0"
quote = "^1.0.0"
proc-macro-error = "^1.0.0"
